--- a/app/notes/NotesPage.module.css
+++ b/app/notes/NotesPage.module.css
@@ -32,3 +32,19 @@
 .button:hover {
   background-color: #0b5ed7;
 }
+
+
+.newButton {
+  background-color: #0d6efd;
+  color: white;             
+  border: none;             
+  padding: 10px;       
+  border-radius: 8px;   
+  cursor: pointer;
+  transition: background-color 0.2s;
+  margin-left: 20px;
+}
+
+.newButton:hover {
+  background-color: #0b5ed7;
+}
